--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Placer les massifs des Alpes occidentales – Le jeu des Massifs</title>
+    <meta name="description" content="Apprendre à situer les massifs des Alpes occidentales grâce au jeu des Massifs. La montagne est belle !">
     <meta name="viewport" content="width=410, initial-scale=1">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="icon" href="mountains.png">
