--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <script src="js/fire.js"></script>
     <script src="js/compiled/app.js"></script>
     <script>massifs.core.init();</script>
   </body>
