--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Placer les massifs des Alpes occidentales – Le jeu des Massifs</title>
     <meta name="description" content="Apprendre à situer les massifs des Alpes occidentales grâce au jeu des Massifs. La montagne est belle !">
+    <meta name="og:image" content="https://www.dropbox.com/s/dpgm8t5xx0zsohy/screen.jpg?dl=1">
     <meta name="viewport" content="width=410, initial-scale=1">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="icon" href="mountains.png">
@@ -13,6 +14,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <script src="js/fire.js"></script>
     <script src="js/compiled/app.js"></script>
     <script>massifs.core.init();</script>
   </body>
