--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Placer les massifs des Alpes occidentales – Le jeu des Massifs</title>
-    <meta name="description" content="Apprendre à situer les massifs des Alpes occidentales grâce au jeu des Massifs. La montagne est belle !">
+    <meta name="description" content="Apprendre à situer les massifs des Alpes occidentales grâce au jeu des Massifs. Mon dieu que la Montagne est belle !">
     <meta name="og:image" content="https://www.dropbox.com/s/dpgm8t5xx0zsohy/screen.jpg?dl=1">
     <meta name="viewport" content="width=410, initial-scale=1">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
