--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
   </head>
   <body>
     <div id="app"></div>
+    <footer class="footer">
+      <div class="container">
+        <div class="content has-text-centered">
+          <p><strong>Le Jeu des Massifs</strong> est proposé par <strong><a href="https://fr.booctin.com/mountain">Booctin'</a></strong></p>
+          <p><small>Merci aux massifs d'avoir jouer le jeu 🙌</small></p>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="js/fire.js"></script>
     <script src="js/compiled/app.js"></script>
