On avait dit pas de clj !

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,6 +17,7 @@
         <div class="content has-text-centered">
           <p><strong>Le Jeu des Massifs</strong> est proposé par <strong><a href="https://fr.booctin.com/mountain">Booctin'</a></strong></p>
           <p><small>Merci aux massifs d'avoir jouer le jeu 🙌</small></p>
+          <p><small>(<a href="https://github.com/teawaterwire/massifs">code source</a>)</small></p>
         </div>
       </div>
     </footer>
